--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 services:
   api:
     build: .
-    command: python src/profiles_project/manage.py runserver 0.0.0.0:80000
+    command: pipenv run python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
